--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,9 +1,9 @@
-<!--
 
-If you use Disqus comments, just uncomment this block.
+
+<!-- If you use Disqus comments, just uncomment this block.
 The only thing you need to change is "test-apkdzgmqhj" - which
 should be replaced with your own Disqus site-id.
-
+ -->
 <div class="post__comments section-padding">
   <div class="grid-small">
     <div id="disqus_thread"></div>
@@ -21,4 +21,4 @@ should be replaced with your own Disqus site-id.
     </script>
   </div>
 </div>
--->
+
